<resources>
    <string name="app_name">MyTestApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="shared_pref_name">com.mycompany.mytestapp.PREFERENCE_FILE_KEY</string>
    <string name="shared_pref_post_counter">com.mycompany.mytestapp.POST_COUNTER</string>

    <!-- menu strings -->
    <string name="action_filter">Filter</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add">Add</string>

    <!-- labels -->
    <string name="label_title">"Title: "</string>
    <string name="label_id">"ID: "</string>
    <string name="label_user_id">"User ID: "</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_add_post">Add post</string>
    <string name="button_clear">Clear</string>

</resources>