<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mycompany.mytestapp.TextFragment">

    <TextView
        android:id="@+id/label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_id" />
    <TextView
        android:id="@+id/label_id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/label_id"
        android:text="ID_NUMBER"/>

    <TextView
        android:id="@+id/label_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_user_id"
        android:layout_below="@id/label_id_value"/>
    <TextView
        android:id="@+id/label_user_id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_id_value"
        android:layout_toRightOf="@id/label_user_id"
        android:text="USER_ID"/>

    <TextView
        android:id="@+id/label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_title"
        android:layout_below="@id/label_user_id_value"/>
    <TextView
        android:id="@+id/label_title_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_user_id_value"
        android:layout_toRightOf="@id/label_title"
        android:textStyle="bold"
        android:text="TITLE"/>

    <TextView
        android:id="@+id/label_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_title_value"
        android:text="TEXT"/>

</RelativeLayout>
